--- a/practica_calificada_1_qu_mica.ipynb
+++ b/practica_calificada_1_qu_mica.ipynb
@@ -3,7 +3,9 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "provenance": []
+      "provenance": [],
+      "authorship_tag": "ABX9TyMvYXSA1aQ7vGNbm7s4UBWw",
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -99,6 +101,16 @@
     }
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/DiesmEsp/Quimica-UNMSM/blob/main/practica_calificada_1_qu_mica.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "markdown",
       "source": [
